--- a/options.html
+++ b/options.html
@@ -40,6 +40,7 @@
     <div id="results"></div>
 </div>
 
+<script src="js/jquery-3.1.1.min.js" type="text/javascript" ></script>
 <script src="js/options.js" type="text/javascript" ></script>
 </body>
 </html>
