added the ability to remove rows for options already sold

--- a/options.html
+++ b/options.html
@@ -20,7 +20,7 @@
             <input id="totalOptions" type="text"><br>
             Strike Price: &nbsp;
             <input id="strikePrice" type="text"><br>
-            Est. Tax Rate: &nbsp;
+            Est. Tax Rate %: &nbsp;
             <input id="taxRate" type="text"><br>
             <br>Current Price: &nbsp;
             <input id="currentPrice" type="text"><br>
@@ -30,7 +30,7 @@
 
     <div class="already">
         <strong>Options Already Sold</strong>
-        <img id="addSold" src="images/plus.png" height="22" width="22"/>
+        <img class="addSold" src="images/plus.png" height="22" width="22"/>
         <form id="soldForm"></form>
 
     </div>
