--- a/options.html
+++ b/options.html
@@ -16,14 +16,23 @@
     <div class="original">
         <strong>General</strong>
         <form>
-            Total Options: &nbsp;
-            <input id="totalOptions" type="text"><br>
-            Strike Price: &nbsp;
-            <input id="strikePrice" type="text"><br>
-            Est. Tax Rate %: &nbsp;
-            <input id="taxRate" type="text"><br>
-            <br>Current Price: &nbsp;
-            <input id="currentPrice" type="text"><br>
+            <p>
+                <label>Total Options: &nbsp;</label>
+                <input id="totalOptions" type="text"><br>
+            </p>
+            <p>
+                <label>Strike Price: &nbsp;</label>
+                <input id="strikePrice" type="text"><br>
+            </p>
+            <p>
+                <label>Est. Tax Rate %: &nbsp;</label>
+                <input id="taxRate" type="text"><br>
+            </p>
+            <br>
+            <p>
+                <label>Current Price: &nbsp;</label>
+                <input id="currentPrice" type="text"><br>
+            </p>
         </form>
     </div>
 
