added some stuff to get the current price

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <span class="heading">
         Options Value
-        <img src="images/cash-dark.png" height="60" width="60" />
+        <img id="cash" src="images/cash-dark.png" height="60" width="60" />
     </span>
 
     <div class="original">
