--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <br>
             <p>
                 <label>Current Price: &nbsp;</label>
-                <input id="currentPrice" type="text"><br>
+                <input id="currentPrice" type="text">
             </p>
         </form>
     </div>
